# webviz-config-equinor

./: .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: codeql.yml  webviz-config-equinor.yml
webviz_config_equinor/: __init__.py
webviz_config_equinor/assets/: equinor_fonts.css  equinor_local.css  equinor_theme.css
