[build-system]
requires = [
    "setuptools >= 69",
    "setuptools_scm >= 7",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
"webviz_config_equinor" = ["assets/*"]

[project]
name = "webviz-config-equinor"
description = "Webviz config Equinor theme"
readme = "README.md"
requires-python = ">=38"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: Other/Proprietary License",
]
dynamic = ["version"]
dependencies = [
    "plotly>=5.0",
    "webviz-config>=0.0.48",
]

[project.optional-dependencies]
tests = [
    "black",
]

[project.entry-points.webviz_config_themes]
equinor_theme = webviz_config_equinor:equinor_theme
